Removed All messages

--- a/force-app/main/default/classes/EmployeeController.cls
+++ b/force-app/main/default/classes/EmployeeController.cls
@@ -80,7 +80,7 @@ public with sharing class EmployeeController {
                 Employee__c = EmpId
             );
             insert newGoal;
-            return newGoal; // Ensure this is being returned successfully
+            return newGoal;
         } catch (Exception e) {
             throw new AuraHandledException('Error creating goal: ' + e.getMessage());
         }
