--- a/force-app/main/default/classes/EmployeeController.cls
+++ b/force-app/main/default/classes/EmployeeController.cls
@@ -115,4 +115,13 @@ public with sharing class EmployeeController {
             throw new AuraHandledException(e.getMessage());
         }
     }
+
+    @AuraEnabled
+    public static List<Account> getAccounts(){
+        try {
+            return [SELECT Id, Name FROM Account];
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
 }
